--- a/Grid/PacificAtlantic/style.css
+++ b/Grid/PacificAtlantic/style.css
@@ -102,9 +102,9 @@ h1 {
   border: 1px solid #000;
   justify-content: center;
   align-items: center;
-  margin: 2px;
+  margin: .5px;
 
-  /* background-color: hsl(240, 100%, 54%); */
+  /* background-color: hsl(180, 100%, 54%); */
 }
 
 .cell-new {
