--- a/Grid/BiggestIsland/style.css
+++ b/Grid/BiggestIsland/style.css
@@ -90,7 +90,7 @@ h1 {
   border: 1px solid #000;
   justify-content: center;
   align-items: center;
-  margin: 2px;
+  margin: .5px;
 }
 
 .cell-new {
