--- a/Grid/NumberOfIslands/style.css
+++ b/Grid/NumberOfIslands/style.css
@@ -71,7 +71,7 @@ h1 {
   border: 1px solid #000;
   justify-content: center;
   align-items: center;
-  margin: 2px;
+  margin: .5px;
 }
 
 .cell-new {
